This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

15-Oct-2003 (Lars Duening)  (3.3.492)
  - (configure) Made sure that -lz always follows the -lmysqlclient,
       as some system apparently can't resolve all backward references
       (reported by Alwin).

02-Oct-2003 (Lars Duening)
  - (comm.c, mempools.c, ptmalloc, xalloc.c) Removed signed/unsigned
       compiler warnings (thanks, Ralph).
  - (pkg-odbc, p-031002) Added, but not yet processed (thanks, Robert!).

30-Sep-2003 (Lars Duening)  (3.3.491)
  - (comm.c) The maxNumCmds setting was defaulted to 0 instead of -1
       (reported by Bardioc).
  - (comm.c, master_skeleton.c) Officially documented that a new
       interactive connection is bound to the master at the time
       of master::connect(), and adjusted the set_max_commands
       manpage accordingly.
  - (lex.c) The macros __RESET_TIME__ and __CLEANUP_TIME__ always used
       the configured values, ignoring commandline overrides (reported
       by Ralph).
  - (interpret.c, func_spec) New efun master() to return the master object.

28-Sep-2003 (Lars Duening)  (3.3.490)
  - (comm.c) Removed a crasher from set_max_commands() (thanks, Ralph!).

27-Sep-2003 (Lars Duening)  (3.3.489)
  - (autoconf) Renamed the option enable-use-array-calls to
      enable-lpc-array-calls, as it's a language option and not a package.

27-Sep-2003 (Lars Duening)  (3.3.488)
  - (efuns.c) Added a third argument to debug_info(DINFO_OBJLIST) to return
       multiple objects.
  - (comm, func_spec) New efuns set_max_commands(), get_max_commands()
       to control the number of commands allowed per second on a
       per-connection basis.
  - (svalue.h) Added macro put_float() to store floats into a svalue.
  - (lex, prolang.y) Pragma (no_)warn_empty_casts allows to turn off
       the warnings about ineffective casts.