@@ -187,6 +187,7 @@ Lars Duening thanks:
      Henk Stokhorst (Tha@wxs.nl)
      Holger Kremss (jur94ewp@studserv.uni-leipzig.de, Holger@web.de,
        Holger@Wunderland)
+     Jaroslaw Sitek (aron@bobas.nowytarg.pl)
      Jason Hitt (jhitt25@swbell.net)
      Joern Rennecke (amylaar@cygnus.co.uk)
      Jose Manuel Roman (roman@wol.es, Theuzifan uzi@simauria.upv.es)
