@@ -63,14 +63,14 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 492)
-(Parent-Version lpmud 3-3 491)
-(Version-Log "Removed compiler warnings.
-configure now makes sure that -lmysqlclient precedes -lz in the link command.")
+(Project-Version lpmud 3-3 493)
+(Parent-Version lpmud 3-3 492)
+(Version-Log "query_ip_number(&arg) didn't return the result.
+Corrections to the lib detection in configure.")
 (New-Version-Log
 ""
 )
-(Checkin-Time "Wed, 15 Oct 2003 21:32:05 -0600")
+(Checkin-Time "Fri, 17 Oct 2003 21:52:55 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -107,21 +107,21 @@ configure now makes sure that -lmysqlclient precedes -lz in the link command.")
   ;; Information about the driver and the distribution in general
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.10 644))
-  (CREDITS (lpmud/d/22_CREDITS 1.70.1.69 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.555 644))
+  (CREDITS (lpmud/d/22_CREDITS 1.70.1.70 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.556 644))
   (HISTORY (lpmud/f/49_HISTORY 1.335 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
   ;; Configuration
-  (src/configure (lpmud/d/0_configure 1.19.1.93 755))
+  (src/configure (lpmud/d/0_configure 1.19.1.94 755))
   (src/config.h.in (lpmud/d/1_config.h 1.41.1.4.1.8.1.37 644))
   (src/machine.h.in (lpmud/b/9_machine.h. 1.9.1.8 644))
   (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.39.1.19.1.22 644))
   (src/mkinstalldirs (lpmud/c/4_mkinstalld 1.1 644))
   (src/install-sh (lpmud/c/5_install-sh 1.2 755))
 
-  (src/autoconf/configure.in (lpmud/d/7_configure. 1.20.1.9.1.83 644))
+  (src/autoconf/configure.in (lpmud/d/7_configure. 1.20.1.9.1.84 644))
   (src/autoconf/acconfig.h (lpmud/d/10_acconfig.h 1.6.1.8 644))
 
   (src/settings/README (lpmud/c/22_README 1.14.1.15 644))
@@ -176,7 +176,7 @@ configure now makes sure that -lmysqlclient precedes -lz in the link command.")
   (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.26 644))
   (src/closure.h (lpmud/f/44_closure.h 1.7.1.17 644))
   (src/closure.c (lpmud/d/4_closure.c 1.41.1.47.1.17 644))
-  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.66 644))
+  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.67 644))
   (src/comm.h (lpmud/d/3_comm.h 1.26.1.37 644))
   (src/driver.h (lpmud/f/36_driver.h 1.15.1.25 644))
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
@@ -190,7 +190,7 @@ configure now makes sure that -lmysqlclient precedes -lz in the link command.")
   (src/files.c (lpmud/i/50_files.c 1.22 644))
   (src/filestat.h (lpmud/f/51_filestat.h 1.7 644))
   (src/gcollect.h (lpmud/f/33_gcollect.h 1.6.1.15 644))
-  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.107 644))
+  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.108 644))
   (src/hash.h (lpmud/f/32_hash.h 1.6 644))
   (src/hash.c (lpmud/c/28_hash.c 1.17 644))
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.5 644))
